Исправлены тесты сервисов